// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling to 
    $150.00
  </h1>
</div>
`;

exports[`Should render expense summary with single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling to 
    $2.00
  </h1>
</div>
`;
